# job_seeker

./: .gitignore  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  pyrefly.toml  requirements.txt
apps/crawler/: detail_consumer.py  main.py  patch_langchain.py  pyproject.toml  pyrefly.toml  scraper.py  sniff_config.py  strategies.py
apps/crawler/agents/: __init__.py  api_agent.py  consume_workflow.py  playwright_agent.py  root_agent.py  traditional_agent.py  workflow.py
apps/gui/: index.html  package-lock.json  package.json
apps/gui/src/: App.tsx  index.css  mockData.ts
apps/gui/src-tauri/: tauri.conf.json
apps/server/: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 04c095274284_initial_schema.py  3824e1397453_.py
scripts/: start-db.sh  stop-db.sh
tests/: conftest.py  test_consume_workflow.py  test_deduplicator.py  test_multi_agent.py  test_strategies.py
